# cayley-schreier-lattices

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
notebooks/: honeycomb.ipynb  methodsfig_a.ipynb  methodsfig_bc.ipynb  triangular_test.ipynb
raw_data/: honeycomb_zigzag_spectrum  suppfig_a  suppfig_b  suppfig_c  triangular_ladder_obc_spectrum  triangular_ladder_spectrum
src/cayley_schreier/: __init__.py  bands.py  hamiltonians.py  linalg.py  spectrum.py  surface.py  symmetry.py  topology.py  wilson.py
