[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cayley-schreier"
version = "0.0.0"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy",
  "scipy",
  "sympy",
  "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
